Fix z-index

--- a/src/sass/components/calc/_button-grid.scss
+++ b/src/sass/components/calc/_button-grid.scss
@@ -60,6 +60,7 @@ $prefix: 'calc';
 		color: #b7b7b7;
 		font-size: 1.5rem;
 		font-weight: 300;
+		position: relative;
 	}
 	&_button#{&}_button-inefficient &_buttonText {
 		opacity: 0.5;
